refactor : 지뢰 관련 코드 수정 및 응답 dto 에서 memberId null 처리 제거 (#196)